# tiny_results_v1.2

./: README.md  final_report_v1.2.xlsx  summary.csv
closed/Qualcomm/: README.md
closed/Qualcomm/code/: CMakeLists.txt  eai.yml
closed/Qualcomm/code/anomaly_detection/: submitter_implemented.cpp
closed/Qualcomm/code/anomaly_detection/eai/: platform.h
closed/Qualcomm/code/image_classification/: submitter_implemented.cpp
closed/Qualcomm/code/image_classification/ic/: ic_model_settings.h
closed/Qualcomm/code/keyword_spotting/: submitter_implemented.cpp
closed/Qualcomm/code/keyword_spotting/eai/: eai_tiny_api.c  eai_tiny_api.h
closed/Qualcomm/code/person_detection/: submitter_implemented.cpp
closed/Qualcomm/code/person_detection/eai/: platform.c
closed/Qualcomm/models/: ._ic_model.eai  ad_model.eai  ic_model.eai  kws_model.eai  vww_model.eai
closed/Qualcomm/systems/: Snapdragon_8_Gen_3_Mobile_Platform_MTP.json  TinyMLPerf v1.2 Submission Checklist.docx  ~$nyMLPerf v1.2 Submission Checklist.docx
closed/Renesas/code/EK-RA8D1/: .cproject  .project  .secure_azone  .secure_xml  RA8D1_LLVM_TFLm_eembc Debug_Flat.launch  README.md  configuration.xml  ra_cfg.txt
closed/Renesas/code/EK-RA8D1/ra_gen/: bsp_clock_cfg.h  hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
closed/Renesas/code/EK-RA8D1/src/: hal_entry.c
closed/Renesas/systems/: EK-RA8D1.json
closed/STMicroelectronics/code/: README-Binaries.txt  README.md
closed/STMicroelectronics/code/NUCLEO_H7A3ZI_Q/anomaly_detection/: AD01.ioc
closed/STMicroelectronics/systems/: NUCLEO_H7A3ZI_Q.json  NUCLEO_L4R5ZI.json  NUCLEO_U575ZI_Q.json
closed/Skymizer/code/: README.md
closed/Skymizer/code/TinkerV-linux-andes_nn/ad/: CMakeLists.txt  arm_nnfunctions.h  build.sh
closed/Skymizer/code/TinkerV-linux-andes_nn/ad/ad01_code/: onnc_main.cpp  onnc_weight.h
closed/Skymizer/code/TinkerV-linux-andes_nn/ad/src/: submitter_implemented.cpp
closed/Skymizer/systems/: TinkerV-linux-andes_nn.json
closed/bosch/: README.md
closed/bosch/systems/: CY8CPROTO_062_4343W_int8.json  DISCO_F746NG_int8_max_performance.json  NUCLEO_G0B1RE_int8.json  NUCLEO_H7A3ZI_int8_max_performance.json  NUCLEO_L4R5ZI_int8.json  NUCLEO_U575ZI_int8_max_performance.json  RENESAS_RH850_F1KMS4_float.json
closed/kai_jiang/: README.md
closed/kai_jiang/systems/: LC236R5E176_BOARD_V2.0.json  TinyMLPerf_v1.2_Submission_Checklist.docx  VCU128.json
closed/syntiant/systems/: TinyMLPerf_v1.2_Submission_Checklist.docx
(+598 files in other folders)
